# post-it

./: .env.example  .gitignore  README.md  pyproject.toml
src/post_it/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py  orchestrator.py  registry.py
src/post_it/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  prompts.py
src/post_it/publishers/: __init__.py  base.py  draft.py  linkedin.py  linkedin_oauth.py
src/post_it/sources/: __init__.py  ai_direct.py  base.py  scraping.py  url_file.py
tests/: conftest.py  test_config.py  test_llm.py  test_orchestrator.py  test_publishers.py  test_sources.py
